--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,35 +11,29 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
 jobs:
-  test:
-    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        version:
-          - '1.9'
-          - 'nightly'
-        os:
-          - ubuntu-latest
-        arch:
-          - x64
+  build:
+    runs-on: macos-latest
+    
     steps:
-      - uses: actions/checkout@v3
-      - uses: julia-actions/setup-julia@v1
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Set up Julia
+        uses: julia-actions/setup-julia@v1
         with:
-          version: ${{ matrix.version }}
-          arch: ${{ matrix.arch }}
-      - uses: julia-actions/cache@v1
-      - uses: julia-actions/julia-buildpkg@v1
-      - uses: julia-actions/julia-runtest@v1
-      - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v3
-        with:
-          files: lcov.info
+          version: 1.9
+
+      - name: Install dependencies
+        run: julia -e 'import Pkg; Pkg.instantiate()'
+      
+      - name: Build
+        run: julia --project=@. -e 'import Pkg; Pkg.build()'
+      
+      - name: Run tests
+        run: julia --project=@. -e 'import Pkg; Pkg.test()'
   docs:
     name: Documentation
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     permissions:
       contents: write
       statuses: write
