--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -58,6 +58,6 @@ jobs:
             using DataFit
             DocMeta.setdocmeta!(DataFit, :DocTestSetup, :(using DataFit); recursive=true)
             doctest(DataFit)'
-- name: Upload coverage reports to Codecov
-  uses: codecov/codecov-action@v3
-   env: CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+#- name: Upload coverage reports to Codecov
+#  uses: codecov/codecov-action@v3
+#   env: CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
